// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt Breadcrumb basic usage with contentItems including rendered components and strings 1`] = `
<bolt-breadcrumb bolt-component>
  <nav class="c-bolt-breadcrumb"
       aria-label="Breadcrumb"
       role="navigation"
  >
    <ol class="c-bolt-breadcrumb__list">
      <li class="c-bolt-breadcrumb__item">
        <bolt-link url="#!">
          <a href="#!"
             target="_self"
             class="c-bolt-link c-bolt-link--display-inline c-bolt-link--valign-center"
          >
            <ssr-keep for="bolt-link"
                      class="c-bolt-link__text"
            >
              Home
            </ssr-keep>
          </a>
        </bolt-link>
      </li>
      <li class="c-bolt-breadcrumb__item">
        <bolt-link url="#!">
          <a href="#!"
             target="_self"
             class="c-bolt-link c-bolt-link--display-inline c-bolt-link--valign-center"
          >
            <ssr-keep for="bolt-link"
                      class="c-bolt-link__text"
            >
              Other Page
            </ssr-keep>
          </a>
        </bolt-link>
      </li>
      <li class="c-bolt-breadcrumb__item">
        <bolt-link url="#!">
          <a href="#!"
             target="_self"
             class="c-bolt-link c-bolt-link--display-inline c-bolt-link--valign-center"
          >
            <ssr-keep for="bolt-link"
                      class="c-bolt-link__text"
            >
              Sub Page
            </ssr-keep>
          </a>
        </bolt-link>
      </li>
      <li class="c-bolt-breadcrumb__item">
        <bolt-link aria-current
                   url="#!"
        >
          <a href="#!"
             target="_self"
             class="c-bolt-link c-bolt-link--display-inline c-bolt-link--valign-center"
          >
            <ssr-keep for="bolt-link"
                      class="c-bolt-link__text"
            >
              Fourth Page
            </ssr-keep>
          </a>
        </bolt-link>
      </li>
    </ol>
  </nav>
</bolt-breadcrumb>
`;

exports[`Bolt Breadcrumb default 1`] = `
<bolt-breadcrumb bolt-component>
  <nav class="c-bolt-breadcrumb"
       aria-label="Breadcrumb"
       role="navigation"
  >
    <ol class="c-bolt-breadcrumb__list">
      <li class="c-bolt-breadcrumb__item">
        <bolt-link url="#!">
          <a href="#!"
             target="_self"
             class="c-bolt-link c-bolt-link--display-inline c-bolt-link--valign-center"
          >
            <ssr-keep for="bolt-link"
                      class="c-bolt-link__text"
            >
              Home
            </ssr-keep>
          </a>
        </bolt-link>
      </li>
      <li class="c-bolt-breadcrumb__item">
        <bolt-link url="#!">
          <a href="#!"
             target="_self"
             class="c-bolt-link c-bolt-link--display-inline c-bolt-link--valign-center"
          >
            <ssr-keep for="bolt-link"
                      class="c-bolt-link__text"
            >
              Other Page
            </ssr-keep>
          </a>
        </bolt-link>
      </li>
      <li class="c-bolt-breadcrumb__item">
        <bolt-link url="#!">
          <a href="#!"
             target="_self"
             class="c-bolt-link c-bolt-link--display-inline c-bolt-link--valign-center"
          >
            <ssr-keep for="bolt-link"
                      class="c-bolt-link__text"
            >
              Sub Page
            </ssr-keep>
          </a>
        </bolt-link>
      </li>
    </ol>
  </nav>
</bolt-breadcrumb>
`;
